--- a/.gitignore
+++ b/.gitignore
@@ -21599,3 +21599,6 @@ Model/__pycache__/__init__.cpython-39.pyc
 Model/__pycache__/API.cpython-39.pyc
 Model/__pycache__/__init__.cpython-39.pyc
 Model/__pycache__/API.cpython-39.pyc
+Server/config.txt
+app/__pycache__/__init__.cpython-39.pyc
+app/__pycache__/API.cpython-39.pyc
