--- a/.gitignore
+++ b/.gitignore
@@ -21602,3 +21602,5 @@ Model/__pycache__/API.cpython-39.pyc
 Server/config.txt
 app/__pycache__/__init__.cpython-39.pyc
 app/__pycache__/API.cpython-39.pyc
+Model/MLR.pkl
+Model/__pycache__/Input.cpython-39.pyc
