Completing runnning State

--- a/.gitignore
+++ b/.gitignore
@@ -21604,3 +21604,8 @@ app/__pycache__/__init__.cpython-39.pyc
 app/__pycache__/API.cpython-39.pyc
 Model/MLR.pkl
 Model/__pycache__/Input.cpython-39.pyc
+Model/__pycache__/Accuracy_Test.cpython-39.pyc
+Model/__pycache__/Input.cpython-39.pyc
+Model/__pycache__/ML.cpython-39.pyc
+Modal/KNN.pkl
+Model/__pycache__/Input.cpython-39.pyc
