--- a/.gitignore
+++ b/.gitignore
@@ -21609,3 +21609,5 @@ Model/__pycache__/Input.cpython-39.pyc
 Model/__pycache__/ML.cpython-39.pyc
 Modal/KNN.pkl
 Model/__pycache__/Input.cpython-39.pyc
+Model/__pycache__/Input.cpython-39.pyc
+Model/__pycache__/Input.cpython-39.pyc
