--- a/.gitignore
+++ b/.gitignore
@@ -21611,3 +21611,4 @@ Modal/KNN.pkl
 Model/__pycache__/Input.cpython-39.pyc
 Model/__pycache__/Input.cpython-39.pyc
 Model/__pycache__/Input.cpython-39.pyc
+Model/__pycache__/Input.cpython-39.pyc
