Final update to backend

--- a/.gitignore
+++ b/.gitignore
@@ -21612,3 +21612,8 @@ Model/__pycache__/Input.cpython-39.pyc
 Model/__pycache__/Input.cpython-39.pyc
 Model/__pycache__/Input.cpython-39.pyc
 Model/__pycache__/Input.cpython-39.pyc
+app/__pycache__/API.cpython-312.pyc
+Model/__pycache__/Accuracy_Test.cpython-312.pyc
+Model/__pycache__/Input.cpython-312.pyc
+Model/__pycache__/ML.cpython-312.pyc
+Model/KNN.pkl
