--- a/.gitignore
+++ b/.gitignore
@@ -21617,3 +21617,4 @@ Model/__pycache__/Accuracy_Test.cpython-312.pyc
 Model/__pycache__/Input.cpython-312.pyc
 Model/__pycache__/ML.cpython-312.pyc
 Model/KNN.pkl
+Dataset/Final_dataset.csv
