--- a/Weather _app/WeatherApp/package.json
+++ b/Weather _app/WeatherApp/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-server": "^18.2.0",
     "@angular/router": "^18.2.0",
     "@angular/ssr": "^18.2.8",
+    "@canvasjs/angular-charts": "^1.2.0",
     "chart.js": "^4.4.5",
     "express": "^4.18.2",
     "ng2-charts": "^6.0.1",
